Fix overflowing repeaters

--- a/packages/cms-admin/src/styles/parts/repeaterItem.sass
+++ b/packages/cms-admin/src/styles/parts/repeaterItem.sass
@@ -6,6 +6,7 @@
 
 	&-content
 		flex: 1 0 auto
+		width: 100%
 
 	&-button
 		flex: 0 0 auto
